--- a/inface.html
+++ b/inface.html
@@ -39,6 +39,8 @@
 <p>
 </p>
 </p>
-
+<div class="polosa">>
+        <p>Библиотека ЮУрГИИ. Составили: Лелеткина М. В., Терентьева М. А. 2023</p>
+    </div>
 </body>
 </html>
