--- a/scher.html
+++ b/scher.html
@@ -48,8 +48,8 @@
 <p>
 </p>
 </p>
-<footer>
+<div class="polosa">
         <p>Библиотека ЮУрГИИ. Составили: Лелеткина М. В., Терентьева М. А. 2023</p>
-    </footer>
+    </div>
 </body>
 </html>
