--- a/scher.html
+++ b/scher.html
@@ -12,7 +12,7 @@
 <img src="oval.png" class="img_oval">
 <div class="text_1"><h1>2023 Год педагога и наставника</h1></div>
 </div>
-<a href=""><img src="Scher.jpg"  width="28%" height="80%" class="page_autor"></a>
+<a href=""><img src="scher.jpg"  width="28%" height="80%" class="page_autor"></a>
 <p class="opisanie">Щербакова, Г.Н. Вам и не снилось… : [повести] / Г.Н. Щербакова. – Москва : АСТ, 2021. – 477, [3]. – (Эксклюзив: Русская класскика).
 </p>
 <p class="anote">
