--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <center>
 <div id="slider">
 <div id="polosa">
-<a href=""><img src="start.png"></a>
-<a href=""><img src="Web.png"></a>
-<a href=""><img src="100.jpg"></a>
-<a href=""><img src="Makar.png"></a>
-<a href=""><img src="velekye.jpg"></a>
+<a href=""><img src="start.png" width="7%" height="100%"></a>
+<a href=""><img src="Web.png" width="7%" height="100%"></a>
+<a href=""><img src="100.jpg" width="7%" height="100%"></a>
+<a href=""><img src="Makar.png" width="7%" height="100%"></a>
+<a href=""><img src="velekye.jpg" width="7%" height="100%"></a>
 </center>
 </div>
 </div>
