--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <p>
 </p>
 </p>
-<div class="polosa">
+<div class="pod">
         <p>Библиотека ЮУрГИИ. Составили: Лелеткина М. В., Терентьева М. А. 2023</p>
     </div>
 </body>
