--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 </div>
 </div>
 <a href="book.html"><h1 class="fancy_1">Просмотр изданий</h1></a>
-<h1 class="fancy">2023 год в России был провозглашён как год наставника и педагога президентом В.В. Путиным ещё в 2021 году. По словам президента, «В знак высочайшей общественной значимости профессии учителя 2023 год, год 200-летия со дня рождения одного из основателей российской педагогики Константина Дмитриевича Ушинского, будет посвящен в нашей стране педагогам и наставникам, будет Год учителя, Год педагога».
-Согласно толковому словарю В.И. Даля педагог – это человек, посвятивший себя воспитанию и обучению детей, молодежи. Наставник, согласно толковому словарю С.И. Ожегова – учитель, руководитель, воспитатель.</h1>
+<h1 class="fancy">2023 год в России был провозглашён как год наставника и педагога президентом В. В. Путиным ещё в 2021 году. По словам президента, «В знак высочайшей общественной значимости профессии учителя 2023 год - год 200-летия со дня рождения одного из основателей российской педагогики Константина Дмитриевича Ушинского, будет посвящен в нашей стране педагогам и наставникам, будет Год учителя, Год педагога».
+Согласно толковому словарю В. И. Даля, педагог – это человек, посвятивший себя воспитанию и обучению детей и молодежи. Наставник, согласно толковому словарю С. И. Ожегова – учитель, руководитель, воспитатель.</h1>
 <center>
 <p><img src="А4.jpg" width="800" height="500" >
 </p>
