--- a/Kur.html
+++ b/Kur.html
@@ -16,23 +16,20 @@
 <p class="opisanie">Кузнецова, Р.В. Курчатов / Р.В. Кузнецова. – 2-е изд. - Москва :
 Молодая гвардия, 2017 – 430, [2] с. : ил. – (Жизнь замечательных
 людей : серия биографий ; вып. 1663).</p>
-<p class="anote">Создатели славянской письменности, братья Константин (получивший
-незадолго до смерти монашеское имя Кирилл) и Мефодий почитаются во
-всем славянском мире. Их жизненный подвиг не случайно приравнивают
-к апостольскому, именуя их «первоучителями» славян. Уроженцы
-греческой Солуни (Фессалоник), они не только создали азбуку, которой и
-по сей день пользуются многие народы (и не только славянские!), но и
-перевели на славянский язык Евангелие и богослужебные книги,
-позволив славянам молиться Богу на родном языке. Предлагаемая
-вниманию читателей биография святых Кирилла и Мефодия принадлежит
-перу писателя Юрия Михайловича Лошица, которого ценители
-биографического жанра хорошо знают как автора книг «Сковорода»,
-«Гончаров» и «Дмитрий Донской», ранее выходивших в серии «Жизнь
-замечательных людей». Надежными путеводителями для автора стали два
-древнейших литературно-исторических памятника старославянской
-письменности – «Житие Мефодия» (так называемые пространные жития
-солунских братьев). Многие страницы книги написаны как развернутый комментарий к этим памятникам отдаленной эпохи и представляют собой
-опыт художественно-исследовательской реконструкции.</p>
+<p class="anote">Академик Игорь Васильевич Курчатов (1903-1960) принадлежит к числу
+тех ученых, чьи труды и практические усилия определили будущее
+человечества. Благодаря ему Советский Союз сумел в сжатые сроки
+создать атомную, а затем и водородную бомбу, разрушив ядерную
+монополию США, начал создавать атомный подводный флот. Курчатов
+не только заложил основы мирного применения атомной энергии, но и
+открыл путь исследованиям по управляемым термоядерным реакциям.
+Несмотря на всемирное признание заслуг Курчатова и большое
+количество посвященных ему публикаций, многие стороны его жизни
+остаются неизученными и малоизвестными. Книга сотрудника Дома-
+музея И.В. Курчатова, доктора исторических наук Раисы Кузнецовой,
+основанная на архивных документах и воспоминаниях, позволяет по-
+новому взглянуть на биографию научного руководителя советского
+атомного проекта.</p>
 <p><a href=""><img src="" class="img_books_1"></a></p>
 </div>
 <p>
